Revision history for Test-NoTabs

1.4 2015-01-29
     - Removed boilerplate section "EXPORT" from pod (RT #96937) (Prakash Kailasa)
     - Tightened checking for pod lines. (RT #95747) (Prakash Kailasa)

1.3 2012-06-25
     - Fix regex to ignore '.svn', but not 'Xsvn' - unescaped .

1.2 2012-06-15
     - Fix to ignore inc/ for Module::Install

1.1 2011-04-29
     - Fix test fails if cwd or perl has a space in its path RT#67376

1.0  2010-02-10
     - Fix warnings with old perl versions (5.8.3) RT#54477
     - Fix bug where malformed POD in one file would break tab-detection
       in following files. (RT#53727)
     - Make output more meaningful when you have failures. RT#46088.

0.9  2009-07-03
     - Fix default text to make sense, test passing means there are no tabs..

0.8  2009-02-04
     - Fix tests to not open the same file 2 times at once,
       as this doesn't work on Win32 and causes CPANTS fails.

0.7  2009-01-06
     - Stop tests dumping files in temporary directory

0.6  2009-01-06
     - Remove Test::Group as a dependency as Test::Group
       currently fails its tests.

0.5  2009-01-04
     - Start building dist with ShipIt
     - Change to remove warnings in newer versions of
       Test::Builder (Florian Ragwitz)

0.4  2008-12-14
     - Change to Module::Install so that we install 
       cleanly on a fresh perl 5.8

0.3  2006-08-26
     - Added missing dependancy (Test::Group)

0.2  2006-08-25
     - Minor code changes and pod updates
     - Added Makefile.PL for compatibility

0.1  2006-08-24
     - Module created and released on an unsuspecting world.