@@ -1,9 +1,6 @@
-MYMETA.*
-Makefile.old
-MANIFEST.bak
-META.yml
-Makefile
-blib
-inc
-pm_to_blib
-Test-NoTabs-*
+/.ackrc
+/.build/
+!/.gitignore
+/.latest
+/Test-NoTabs-*/
+/Test-NoTabs-*.tar.gz
