@@ -1,23 +1,0 @@
-Changes
-inc/Module/AutoInstall.pm
-inc/Module/Install.pm
-inc/Module/Install/AutoInstall.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Include.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/Test/NoTabs.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00-load.t
-t/04-pod.t
-t/05-pod-coverage.t
-t/11-all.t
-t/12-fail.t
-t/13-badpod.t
