@@ -1,13 +1,0 @@
-MYMETA.*
-MANIFEST.bak
-MANIFEST.SKIP
-.git
-.gitignore
-Test-NoTabs-*
-Makefile.old
-.shipit
-^Makefile$
-blib
-pm_to_blib
-.*.swp
-
