@@ -1,0 +1,15 @@
+name        = Test-NoTabs
+author      = Nick Gerakines <nick@socklabs.com>
+author      = Tomas Doran (t0m) <bobtfish@bobtfish.net>
+copyright_holder = Nick Gerakines
+license     = Perl_5
+copyright_year = 2006
+
+[@Author::ETHER]
+:version = 0.086
+installer = MakeMaker
+Authority.authority = cpan:SOCK
+-remove = PodWeaver             ; TODO
+-remove = Test::CleanNamespaces ; TODO
+-remove = Test::EOL             ; TODO
+-remove = Test::PodSpelling     ; TODO
