@@ -1,4 +1,0 @@
-use Test::More;
-eval "use Test::Pod";
-plan skip_all => "Test::Pod required for testing POD" if $@;
-all_pod_files_ok();
